--- a/style.css
+++ b/style.css
@@ -13,3 +13,45 @@
     --blue: #547b74;
 }
 
+body{
+    background-color: var(--bg);
+}
+
+
+.menu{
+    width: 45px;
+    top: 2%;
+    position: absolute;
+    right: 4%;
+
+}
+
+.yellow-header{
+    width: 100%;
+    position: relative;
+    display: inline-block;
+}
+
+
+h1{
+    position: absolute;
+    top: 4%;
+    left: 4%;
+    color: var(--bg);
+    font-family: 'Staatliches', cursive;
+    font-size: 45px;
+    font-weight: 400;
+
+}
+
+h2{
+    position: absolute;
+    top: 10%;
+    left: 4%;
+    color: var(--bg);
+    font-family: 'Mulish', sans-serif;
+    font-weight: 200;
+}
+
+
+
