--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
 
 }
 
-h2{
+.forside-h2{
     position: absolute;
     top: 10%;
     left: 4%;
@@ -148,5 +148,25 @@ h1{
     text-decoration: none;
     border-radius: 50px;
     padding: 10px;
-    grid-column-start: 2;
+}
+
+.lys-titel{
+    font-weight: 400;
+    color: var(--bg);
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    left: 39%;
+    margin: 0;
+    
+}
+
+h2{
+    font-family: 'Mulish', sans-serif;
+    font-size: 15px;
+    color: var(--bg);
+    font-weight: 200;
+    margin: 0;
+    
 }
