--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ h1{
     text-decoration: none;
     border-radius: 50px;
     padding: 10px;
+    margin-left: 129px;
+    margin-right: 129px;
 }
 
 .lys-titel{
