--- a/style.css
+++ b/style.css
@@ -164,11 +164,53 @@ h1{
     
 }
 
-h2{
+.lys-tekst{
     font-family: 'Mulish', sans-serif;
     font-size: 15px;
     color: var(--bg);
-    font-weight: 200;
+    font-weight: 400;
     margin: 0;
-    
 }
+
+
+/*YOUNG AUTO DRIVERS*/
+h2{
+    font-family: 'Mulish', sans-serif;
+    font-size: 15px;
+    color: var(--grey);
+    font-weight: 400;
+    text-align: center;
+}
+
+.koncept{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+.koncept img{
+    border-radius: 7px;
+}
+
+.boks{
+    background-color: var(--blue);
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+    border-radius: 7px;
+}
+
+.boks img{
+    margin: 16px;
+}
+
+.boks h6{
+    color: var(--bg);
+    margin-top: 30px;
+}
+.boks h2{
+    color: var(--bg);
+    margin-bottom: 30px;
+}
+
+
