--- a/style.css
+++ b/style.css
@@ -214,3 +214,36 @@ h2{
 }
 
 
+/*OM MIG*/
+.blue-header{
+    position: relative;
+    display: inline-block;
+}
+
+.om-h1{
+    font-weight: 400;
+    color: var(--grey);
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    left: 39%;
+    margin: 0;
+}
+
+.boks2{
+    background-color: var(--yellow);
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+    border-radius: 7px;
+    padding: 30px;
+}
+
+.boks2 h6{
+    color: var(--bg);
+}
+
+.boks2 h2{
+    color: var(--bg);
+}
