--- a/style.css
+++ b/style.css
@@ -18,13 +18,49 @@ body{
 }
 
 
-.menu{
-    width: 35px;
+/* Dropdown Button */
+.menu {
+   width: 35px;
     top: 2%;
     position: absolute;
     right: 4%;
-
 }
+
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--yellow);
+  width: 100%;
+  height: 100%;
+  
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: var(--bg);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-weight: 400;
+  font-size: 30px;
+  margin-bottom: 53.5px;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+
+
+
 
 /*FORSIDE*/
 /*header*/
@@ -254,3 +290,5 @@ h2{
     grid-column-end: 5;
     margin: 30px;
 }
+
+/*DROPDOWN MENU*/
