--- a/style.css
+++ b/style.css
@@ -34,29 +34,28 @@ body{
   background-color: var(--yellow);
   width: 100%;
   height: 100%;
+
   
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: var(--bg);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  font-weight: 400;
-  font-size: 30px;
-  margin-bottom: 53.5px;
+    color: var(--bg);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-weight: 400;
+    font-size: 30px;
+    margin-bottom: 53.5px;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {background-color: var(--blue)}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
 
 
 
@@ -78,6 +77,7 @@ body{
     font-family: 'Staatliches', cursive;
     font-size: 45px;
     font-weight: 400;
+    margin: 0;
 
 }
 
