Ballet by Birgitte
- tilføjelse af Ballet by Birgitte
- beskæring af baggrunds billede
- tilføjelse af skærmbillede til Ballet by Birgitte case

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ h1{
 
 .cases img{
     border-radius: 7px;
+    margin-bottom: 10px;
 }
 
 .cases a{
@@ -283,6 +284,15 @@ h2{
 .boks2 h2{
     color: var(--bg);
 }
+
+/*BALLET BY BIRGITTE*/
+.bbb{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+
 
 /*FRITIDSPROJEKTER*/
 .fritid{
