--- a/style.css
+++ b/style.css
@@ -98,12 +98,14 @@ body{
 .fokus h3{
     font-weight: 400;
     text-align: center;
-
+    color: var(--grey);
 }
 
 .fokus p{
     font-family: 'Mulish', sans-serif;
     text-align: center;
+    color: var(--grey);
+    font-size: 17px;
 }
 
 .fokus h4{
@@ -111,6 +113,7 @@ body{
     text-align: center;
     padding-top: 35px;
     font-size: 15px;
+    color: var(--grey);
 }
 
 .fokus h5{
@@ -118,6 +121,7 @@ body{
     text-align: center;
     font-weight: initial;
     font-size: 13px;
+    color: var(--grey);
 }
 
 /*footer til forside*/
@@ -125,6 +129,7 @@ body{
     width: 100%;
     padding-top: 90px;
     padding-bottom: 0;
+    margin-bottom: 0;
     
 }
 
@@ -301,4 +306,16 @@ h2{
     margin: 30px;
 }
 
-/*DROPDOWN MENU*/
+/*FOOTER*/
+.footer{
+    background-color: var(--blue);
+    padding: 15px;
+}
+
+p{
+    font-family: 'Mulish', sans-serif;
+    color: var(--bg);
+    text-align: center;
+    font-weight: 300;
+    font-size: 10px;
+}
