--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body{
 h6{
     text-align: center;
     font-size: 20px;
-    columns: var(--grey);
+    color: var(--grey);
     font-weight: 400;
 }
 
@@ -253,6 +253,21 @@ h2{
 .boks h2{
     color: var(--bg);
     margin-bottom: 30px;
+}
+
+/*BOLLYWOOD SWAY*/
+.bollywood{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+.bollywood img{
+    border-radius: 7px;
+}
+
+.grid h2{
+    margin-bottom: 25px;
 }
 
 
