--- a/style.css
+++ b/style.css
@@ -190,8 +190,8 @@ h1{
     text-decoration: none;
     border-radius: 50px;
     padding: 10px;
-    margin-left: 129px;
-    margin-right: 129px;
+    margin-left: 149px;
+    margin-right: 149px;
 }
 
 .lys-titel{
@@ -254,6 +254,19 @@ h2{
     color: var(--bg);
     margin-bottom: 30px;
 }
+
+/*SPACIOUS*/
+.space{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+.space img{
+    border-radius: 7px;
+}
+
+
 
 /*BOLLYWOOD SWAY*/
 .bollywood{
