--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ h2{
 
 .om-h1{
     font-weight: 400;
-    color: var(--grey);
+    color: var(--bg);
     font-size: 40px;
     text-align: center;
     position: absolute;
@@ -308,6 +308,7 @@ h2{
     margin: 30px;
     border-radius: 7px;
     padding: 30px;
+    margin-top: 160px;
 }
 
 .boks2 h6{
@@ -316,6 +317,12 @@ h2{
 
 .boks2 h2{
     color: var(--bg);
+}
+
+.mig{
+    position: absolute;
+    top: 90px;
+    left: 150px;
 }
 
 /*BALLET BY BIRGITTE*/
