--- a/style.css
+++ b/style.css
@@ -357,3 +357,70 @@ p{
     font-weight: 300;
     font-size: 10px;
 }
+
+
+@media screen and (min-width: 1080px){
+
+/*Navigation*/
+.menu {
+    width: 35px;
+     top: 3%;
+     position: absolute;
+     right: 2%;
+     cursor: pointer;
+ }
+ 
+ .dropdown{
+     position: relative;
+     background-color: var(--yellow);
+
+ }
+ 
+ /*Dropdown Content (Hidden when no used)*/
+ .dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: var(--yellow);
+   width: 100%;
+   height: 100%;
+ }
+ 
+ /* Links inside the dropdown */
+ .dropdown-content a {
+     color: var(--bg);
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+     text-align: center;
+     font-weight: 400;
+     font-size: 30px;
+     margin-bottom: 53.5px;
+     cursor: pointer;
+ }
+ 
+ /* Change color of dropdown links on hover */
+ .dropdown-content a:hover {background-color: var(--blue)}
+ 
+
+ /*Hide nav again when clicking on menu icon*/
+ .show {display:block;}
+
+}
+
+
+/*TEKST*/
+.header-forside h1{
+    font-size: 137px;
+    top: 13%;
+}
+
+.forside-h2{
+    position: absolute;
+    top: 30%;
+    left: 4%;
+    color: var(--bg);
+    font-family: 'Mulish', sans-serif;
+    font-weight: 200;
+    font-size: 73px;
+
+}
