--- a/style.css
+++ b/style.css
@@ -17,8 +17,77 @@ body{
     background-color: var(--bg);
 }
 
+/*header*/
 
-@media screen and (max-width: 600px){
+.yellow-header{
+    width: 100%;
+    position: relative;
+    display: inline-block;
+}
+
+
+/*main content*/
+
+.fokus{
+    padding: 45px;
+}
+
+.fokus h3{
+    font-weight: 400;
+    text-align: center;
+    color: var(--grey);
+}
+
+.fokus p{
+    font-family: 'Mulish', sans-serif;
+    text-align: center;
+    color: var(--grey);
+    font-size: 17px;
+}
+
+.fokus h4{
+    font-weight: 400;
+    text-align: center;
+    padding-top: 35px;
+    font-size: 15px;
+    color: var(--grey);
+}
+
+.fokus h5{
+    font-family: 'Mulish', sans-serif;
+    text-align: center;
+    font-weight: initial;
+    font-size: 13px;
+    color: var(--grey);
+}
+
+
+/*footer til forside*/
+
+.footer {
+    background-color: var(--blue);
+    padding: 15px;
+}
+
+p {
+    font-family: 'Mulish', sans-serif;
+    color: var(--bg);
+    text-align: center;
+    font-weight: 300;
+    font-size: 10px;
+}
+
+.bund{
+    width: 100%;
+    padding-top: 90px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    
+}
+
+
+
+@media screen and(max-width: 600px){
 
 /* Dropdown Button */
 
@@ -69,17 +138,9 @@ body{
 
 
 
-
 /*FORSIDE*/
 
 /*header*/
-
-.yellow-header{
-    width: 100%;
-    position: relative;
-    display: inline-block;
-}
-
 .header-forside h1{
     position: absolute;
     top: 4%;
@@ -101,49 +162,6 @@ body{
     font-weight: 200;
 }
 
-/*main content*/
-
-.fokus{
-    padding: 45px;
-}
-
-.fokus h3{
-    font-weight: 400;
-    text-align: center;
-    color: var(--grey);
-}
-
-.fokus p{
-    font-family: 'Mulish', sans-serif;
-    text-align: center;
-    color: var(--grey);
-    font-size: 17px;
-}
-
-.fokus h4{
-    font-weight: 400;
-    text-align: center;
-    padding-top: 35px;
-    font-size: 15px;
-    color: var(--grey);
-}
-
-.fokus h5{
-    font-family: 'Mulish', sans-serif;
-    text-align: center;
-    font-weight: initial;
-    font-size: 13px;
-    color: var(--grey);
-}
-
-/*footer til forside*/
-.bund{
-    width: 100%;
-    padding-top: 90px;
-    padding-bottom: 0;
-    margin-bottom: 0;
-    
-}
 
 
 
@@ -161,8 +179,9 @@ body{
     grid-column-start: 1;
     grid-column-end: 5;
     margin: 30px;
-
 }
+
+
 
 h6{
     text-align: center;
@@ -180,7 +199,16 @@ h1{
     margin-top: 50px;
 }
 
+
+
 /*CASES SIDE*/
+
+.yellow-header2{
+position: relative;
+display: inline-block;
+width: 100%;
+}
+
 .cases{
     grid-column-start: 1;
     grid-column-end: 5;
@@ -266,6 +294,8 @@ h2{
     color: var(--bg);
     margin-bottom: 30px;
 }
+
+
 
 /*SPACIOUS*/
 .space{
@@ -356,25 +386,12 @@ h2{
     margin: 30px;
 }
 
-
-/*FOOTER*/
-.footer{
-    background-color: var(--blue);
-    padding: 15px;
 }
 
-p{
-    font-family: 'Mulish', sans-serif;
-    color: var(--bg);
-    text-align: center;
-    font-weight: 300;
-    font-size: 10px;
-}
-}
 
 @media screen and (min-width: 1080px){
 
-/*Navigation*/
+/*NAVIGATION*/
 .menu {
     width: 35px;
     top: 30px;
@@ -386,17 +403,18 @@ p{
 
 .dropdown {
     position: absolute;
-    background-color: var(--yellow);
     top: 30px;
     width: 100%;
     height: 50px;
 }
 
+/*Height of menu when used*/
 .dropdown.show {
     height: 100vh;
 }
 
-/*Dropdown Content (Hidden when no used)*/
+
+/*Dropdown Content (Hidden when not used)*/
 .dropdown-content {
     display: none;
     position: absolute;
@@ -405,7 +423,7 @@ p{
     height: 100%;
 }
 
-/* Links inside the dropdown */
+/* Links inside dropdown */
 .dropdown-content a {
     color: var(--bg);
     padding: 12px 16px;
@@ -421,53 +439,15 @@ p{
     .dropdown-content a:hover {
     background-color: var(--blue)
 }
+
 /*Hide nav again when clicking on menu icon*/
 .show {
     display: block;
 }
-
-     top: 3%;
-     position: absolute;
-     right: 2%;
-     cursor: pointer;
- }
  
- .dropdown{
-     position: relative;
-     background-color: var(--yellow);
-
- }
- 
- /*Dropdown Content (Hidden when no used)*/
- .dropdown-content {
-   display: none;
-   position: absolute;
-   background-color: var(--yellow);
-   width: 100%;
-   height: 100%;
- }
- 
- /* Links inside the dropdown */
- .dropdown-content a {
-     color: var(--bg);
-     padding: 12px 16px;
-     text-decoration: none;
+.show .dropdown-content{
      display: block;
-     text-align: center;
-     font-weight: 400;
-     font-size: 30px;
-     margin-bottom: 53.5px;
-     cursor: pointer;
- }
- 
- /* Change color of dropdown links on hover */
- .dropdown-content a:hover {background-color: var(--blue)}
- 
-
- /*Hide nav again when clicking on menu icon*/
- .show{
-   display:block;
-  }
+}
 
 
 
@@ -475,7 +455,10 @@ p{
 .header-forside h1{
     font-size: 137px;
     top: 13%;
-    color: var(--bg)
+    color: var(--bg);
+    position: absolute;
+    left: 4%;
+    font-weight: 400;
 }
 
 .forside-h2{
@@ -487,4 +470,243 @@ p{
     font-weight: 200;
     font-size: 73px;
 }
+
+h1{
+    
+    font-weight: 400;
+    color: var(--grey);
+    font-size: 110px;
+    text-align: center;
+    margin-top: 100px;
+
+
+}
+
+h2{
+    font-family: 'Mulish', sans-serif;
+    font-size: 40px;
+    color: var(--grey);
+    font-weight: 400;
+    text-align: center;
+}
+
+h6{
+    font-weight: 400;
+    color: var(--grey);
+    text-align: center;
+    font-size: 50px;
+    margin-top: 30px;
+}
+
+.lys-titel{
+    font-weight: 400;
+    color: var(--bg);
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    right: 37%;
+    margin: 0;
+}
+
+
+
+
+
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 30px;
+}
+
+
+/*YOUNG AUTO DRIVERS*/
+h2{
+    font-family: 'Mulish', sans-serif;
+    font-size: 15px;
+    color: var(--grey);
+    font-weight: 400;
+    text-align: center;
+}
+
+.koncept{
+    grid-column-start: 2;
+    grid-column-end: 16;
+    
+}
+
+.koncept img{
+    border-radius: 7px;
+}
+
+.boks{
+    background-color: var(--blue);
+    grid-column-start: 2;
+    grid-column-end: 16;
+    border-radius: 7px;
+}
+
+.boks img{
+    margin: 16px;
+}
+
+.boks h6{
+    color: var(--bg);
+    margin-top: 60px;
+}
+.boks h2{
+    color: var(--bg);
+    margin-bottom: 60px;
+}
+
+
+
+/*SPACIOUS*/
+.space{
+    grid-column-start: 2;
+    grid-column-end: 16;
+}
+
+.space img{
+    border-radius: 7px;
+}
+
+
+
+/*BOLLYWOOD SWAY*/
+.bollywood{
+    grid-column-start: 2;
+    grid-column-end: 16;
+}
+
+.bollywood img{
+    border-radius: 7px;
+}
+
+.grid h2{
+    margin-bottom: 25px;
+}
+
+
+/*OM MIG*/
+.blue-header{
+    position: relative;
+    display: inline-block;
+}
+
+.om-h1{
+    font-weight: 400;
+    color: var(--bg);
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    left: 39%;
+    margin: 0;
+}
+
+.boks2{
+    background-color: var(--yellow);
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+    border-radius: 7px;
+    padding: 30px;
+    margin-top: 160px;
+}
+
+.boks2 h6{
+    color: var(--bg);
+}
+
+.boks2 h2{
+    color: var(--bg);
+}
+
+.mig{
+    position: absolute;
+    top: 90px;
+    left: 150px;
+}
+
+/*BALLET BY BIRGITTE*/
+.bbb{
+    grid-column-start: 2;
+    grid-column-end: 16;
+}
+
+.bbb img{
+    border-radius: 7px;
+}
+
+
+/*FRITIDSPROJEKTER*/
+.fritid{
+    grid-column-start: 2;
+    grid-column-end: 16;
+    margin: 30px;
+}
+
+.fotos{
+    grid-column-start: 5;
+    grid-column-end: 13;
+}
+
+
+/*CASES SIDE*/
+
+.yellow-header2{
+position: relative;
+display: inline-block;
+width: 70%;
+}
+
+.cases{
+    grid-column-start: 4;
+    grid-column-end: 14;
+}
+
+.cases img{
+    border-radius: 7px;
+    margin-bottom: 30px;
+}
+
+.cases a{
+    background-color: var(--grey);
+    border: none;
+    color: var(--bg);
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50px;
+    padding: 20px;
+    margin-top: 10px;
+    margin-left: 323px;
+    margin-right: 323px;
+    margin-bottom: 20px;
+}
+
+
+.lys-titel{
+    font-weight: 400;
+    color: var(--bg);
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    left: 39%;
+    margin: 0;
+    z-index: 4;
+    
+}
+
+.lys-tekst{
+    font-family: 'Mulish', sans-serif;
+    font-size: 15px;
+    color: var(--bg);
+    font-weight: 400;
+    margin: 0;
+}
+
 }
