--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 /*header*/
 
 .yellow-header{
-    width: 100%;
+    max-width: 100%;
     position: relative;
     display: inline-block;
 }
@@ -64,12 +64,12 @@ body{
 
 /*footer til forside*/
 
-.footer {
+.footer{
     background-color: var(--blue);
     padding: 15px;
 }
 
-p {
+p{
     font-family: 'Mulish', sans-serif;
     color: var(--bg);
     text-align: center;
@@ -85,19 +85,35 @@ p {
     
 }
 
-
-
-@media screen and(max-width: 600px){
-
-/* Dropdown Button */
-
-.menu {
+/*Drop down button*/
+.menu{
    width: 35px;
     top: 2%;
     position: absolute;
     right: 4%;
+    z-index: 5;
 }
 
+/*header*/
+.header-forside h1{
+    position: absolute;
+    top: 4%;
+    left: 4%;
+    color: var(--bg);
+    font-family: 'Staatliches', cursive;
+    font-size: 45px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.forside-h2{
+    position: absolute;
+    top: 10%;
+    left: 4%;
+    color: var(--bg);
+    font-family: 'Mulish', sans-serif;
+    font-weight: 200;
+}
 
 /* Dropdown Content (Hidden by Default) */
 
@@ -128,59 +144,21 @@ p {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover{
-    background-color: var(--blue)
+    background-color: var(--blue);
 }
 
 /* Show the dropdown menu on hover */
-.dropdown-content{
+.dropdown:hover .dropdown-content{
     display: block;
 }
 
-
-
-/*FORSIDE*/
-
-/*header*/
-.header-forside h1{
-    position: absolute;
-    top: 4%;
-    left: 4%;
-    color: var(--bg);
-    font-family: 'Staatliches', cursive;
-    font-size: 45px;
-    font-weight: 400;
-    margin: 0;
-
+.show {
+    display: block;
 }
-
-.forside-h2{
-    position: absolute;
-    top: 10%;
-    left: 4%;
-    color: var(--bg);
-    font-family: 'Mulish', sans-serif;
-    font-weight: 200;
+ 
+.show .dropdown-content{
+     display: block;
 }
-
-
-
-
-
-/*FOTOGRAFI-SIDE*/
-.grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
-    
-
-}
-
-.fotos{
-    grid-column-start: 1;
-    grid-column-end: 5;
-    margin: 30px;
-}
-
 
 
 h6{
@@ -199,7 +177,12 @@ h1{
     margin-top: 50px;
 }
 
-
+h2{
+    color: var(--bg);
+    font-family: 'Mulish', sans-serif;
+    font-weight: 200;
+    font-size: 15px;
+}
 
 /*CASES SIDE*/
 
@@ -209,16 +192,6 @@ display: inline-block;
 width: 100%;
 }
 
-.cases{
-    grid-column-start: 1;
-    grid-column-end: 5;
-    margin: 30px;
-}
-
-.cases img{
-    border-radius: 7px;
-    margin-bottom: 10px;
-}
 
 .cases a{
     background-color: var(--grey);
@@ -234,6 +207,36 @@ width: 100%;
     margin-right: 149px;
 }
 
+    .cases img{
+    border-radius: 7px;
+    margin-bottom: 10px;
+}
+
+
+.fotos{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+.yellow-header2{
+    position: relative;
+    display: inline-block;
+    width: 90%;
+    }
+    
+.cases img{
+    border-radius: 7px;
+    margin-bottom: 30px;
+}
+
+.cases{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+
 .lys-titel{
     font-weight: 400;
     color: var(--bg);
@@ -245,6 +248,32 @@ width: 100%;
     margin: 0;
     
 }
+
+
+
+
+
+    
+    
+
+@media screen and(max-width: 600px){
+
+
+
+/*FOTOGRAFI-SIDE*/
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+    
+}
+
+
+     
+
+
+
+
 
 .lys-tekst{
     font-family: 'Mulish', sans-serif;
@@ -682,31 +711,11 @@ width: 70%;
     border-radius: 50px;
     padding: 20px;
     margin-top: 10px;
-    margin-left: 323px;
-    margin-right: 323px;
+    margin-left: 413px;
+    margin-right: 413px;
     margin-bottom: 20px;
 }
 
 
-.lys-titel{
-    font-weight: 400;
-    color: var(--bg);
-    font-size: 40px;
-    text-align: center;
-    position: absolute;
-    top: 50px;
-    left: 39%;
-    margin: 0;
-    z-index: 4;
-    
-}
-
-.lys-tekst{
-    font-family: 'Mulish', sans-serif;
-    font-size: 15px;
-    color: var(--bg);
-    font-weight: 400;
-    margin: 0;
-}
 
 }
