--- a/style.css
+++ b/style.css
@@ -249,60 +249,6 @@ width: 100%;
     
 }
 
-
-
-
-
-    
-    
-
-@media screen and(max-width: 600px){
-
-
-
-/*FOTOGRAFI-SIDE*/
-.grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 10px;
-    
-}
-
-
-     
-
-
-
-
-
-.lys-tekst{
-    font-family: 'Mulish', sans-serif;
-    font-size: 15px;
-    color: var(--bg);
-    font-weight: 400;
-    margin: 0;
-}
-
-
-/*YOUNG AUTO DRIVERS*/
-h2{
-    font-family: 'Mulish', sans-serif;
-    font-size: 15px;
-    color: var(--grey);
-    font-weight: 400;
-    text-align: center;
-}
-
-.koncept{
-    grid-column-start: 1;
-    grid-column-end: 5;
-    margin: 30px;
-}
-
-.koncept img{
-    border-radius: 7px;
-}
-
 .boks{
     background-color: var(--blue);
     grid-column-start: 1;
@@ -323,37 +269,6 @@ h2{
     color: var(--bg);
     margin-bottom: 30px;
 }
-
-
-
-/*SPACIOUS*/
-.space{
-    grid-column-start: 1;
-    grid-column-end: 5;
-    margin: 30px;
-}
-
-.space img{
-    border-radius: 7px;
-}
-
-
-
-/*BOLLYWOOD SWAY*/
-.bollywood{
-    grid-column-start: 1;
-    grid-column-end: 5;
-    margin: 30px;
-}
-
-.bollywood img{
-    border-radius: 7px;
-}
-
-.grid h2{
-    margin-bottom: 25px;
-}
-
 
 /*OM MIG*/
 .blue-header{
@@ -396,6 +311,85 @@ h2{
     left: 150px;
 }
 
+
+
+    
+    
+
+@media screen and(max-width: 600px){
+
+
+
+/*FOTOGRAFI-SIDE*/
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+    
+}
+
+
+
+
+.lys-tekst{
+    font-family: 'Mulish', sans-serif;
+    font-size: 15px;
+    color: var(--bg);
+    font-weight: 400;
+    margin: 0;
+}
+
+
+/*YOUNG AUTO DRIVERS*/
+h2{
+    font-family: 'Mulish', sans-serif;
+    font-size: 15px;
+    color: var(--grey);
+    font-weight: 400;
+    text-align: center;
+}
+
+.koncept{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+.koncept img{
+    border-radius: 7px;
+}
+
+
+/*SPACIOUS*/
+.space{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+.space img{
+    border-radius: 7px;
+}
+
+
+
+/*BOLLYWOOD SWAY*/
+.bollywood{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+}
+
+.bollywood img{
+    border-radius: 7px;
+}
+
+.grid h2{
+    margin-bottom: 25px;
+}
+
+
+
 /*BALLET BY BIRGITTE*/
 .bbb{
     grid-column-start: 1;
@@ -416,6 +410,8 @@ h2{
 }
 
 }
+
+
 
 
 @media screen and (min-width: 1080px){
@@ -623,24 +619,14 @@ h2{
     display: inline-block;
 }
 
-.om-h1{
-    font-weight: 400;
-    color: var(--bg);
-    font-size: 40px;
-    text-align: center;
-    position: absolute;
-    top: 50px;
-    left: 39%;
-    margin: 0;
-}
 
 .boks2{
     background-color: var(--yellow);
-    grid-column-start: 1;
-    grid-column-end: 5;
+    grid-column-start: 3;
+    grid-column-end: 15;
     margin: 30px;
     border-radius: 7px;
-    padding: 30px;
+    padding: 60px;
     margin-top: 160px;
 }
 
@@ -654,8 +640,12 @@ h2{
 
 .mig{
     position: absolute;
-    top: 90px;
-    left: 150px;
+    top: 100px;
+    right: 1px;
+}
+
+.mig2{
+    width: 500px;
 }
 
 /*BALLET BY BIRGITTE*/
@@ -716,6 +706,35 @@ width: 70%;
     margin-bottom: 20px;
 }
 
+
+
+
+/*OM MIG*/
+
+
+.boks2{
+    background-color: var(--yellow);
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin: 30px;
+    border-radius: 7px;
+    padding: 30px;
+    margin-top: 160px;
+}
+
+.boks2 h6{
+    color: var(--bg);
+}
+
+.boks2 h2{
+    color: var(--bg);
+}
+
+.mig{
+    position: absolute;
+    top: 90px;
+    left: 150px;
+}
 
 
 }
