--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ width: 100%;
 .blue-header{
     position: relative;
     display: inline-block;
+    width: 100%;
 }
 
 .om-h1{
@@ -287,6 +288,7 @@ width: 100%;
     margin: 0;
 }
 
+/*Tekstboks på om-mig*/
 .boks2{
     background-color: var(--yellow);
     grid-column-start: 1;
@@ -305,10 +307,15 @@ width: 100%;
     color: var(--bg);
 }
 
+/*Portræt af mig*/
 .mig{
     position: absolute;
-    top: 90px;
-    left: 150px;
+    top: 100px;
+    left: 140px;
+}
+
+.mig2{
+    width: 200px;
 }
 
 
@@ -393,18 +400,13 @@ h2{
     
 
 @media screen and(max-width: 600px){
-
-
-
-/*FOTOGRAFI-SIDE*/
+/*Grid til alle sider i mobil format*/
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
-    
+    }
 }
-}
-
 
 
 
@@ -615,6 +617,8 @@ h2{
 }
 
 
+/*Tekstboks på om-mig*/
+
 .boks2{
     background-color: var(--yellow);
     grid-column-start: 3;
@@ -623,6 +627,7 @@ h2{
     border-radius: 7px;
     padding: 60px;
     margin-top: 160px;
+    margin-bottom: 160px;
 }
 
 .boks2 h6{
@@ -633,17 +638,20 @@ h2{
     color: var(--bg);
 }
 
+/*Portræt af mig*/
 .mig{
     position: absolute;
-    top: 100px;
-    right: 1px;
+    top: 170px;
+    left: 750px;
 }
 
 .mig2{
     width: 500px;
 }
 
+
 /*BALLET BY BIRGITTE*/
+/*sætter div i grid*/
 .bbb{
     grid-column-start: 2;
     grid-column-end: 16;
@@ -655,6 +663,7 @@ h2{
 
 
 /*FRITIDSPROJEKTER*/
+/*Sætter div i grid*/
 .fritid{
     grid-column-start: 2;
     grid-column-end: 16;
@@ -675,6 +684,7 @@ display: inline-block;
 width: 70%;
 }
 
+/*Sætter div i grid*/
 .cases{
     grid-column-start: 4;
     grid-column-end: 14;
@@ -685,6 +695,7 @@ width: 70%;
     margin-bottom: 30px;
 }
 
+/*Knapper til cases*/
 .cases a{
     background-color: var(--grey);
     border: none;
@@ -703,33 +714,10 @@ width: 70%;
 
 
 
-
 /*OM MIG*/
 
 
-.boks2{
-    background-color: var(--yellow);
-    grid-column-start: 1;
-    grid-column-end: 5;
-    margin: 30px;
-    border-radius: 7px;
-    padding: 30px;
-    margin-top: 160px;
-}
 
-.boks2 h6{
-    color: var(--bg);
-}
-
-.boks2 h2{
-    color: var(--bg);
-}
-
-.mig{
-    position: absolute;
-    top: 90px;
-    left: 150px;
-}
 
 
 }
