--- a/style.css
+++ b/style.css
@@ -25,8 +25,82 @@ body{
     display: inline-block;
 }
 
+/*Drop down button*/
+.menu{
+    width: 35px;
+     top: 2%;
+     position: absolute;
+     right: 4%;
+     z-index: 5;
+ }
+ 
+ /*header*/
+ .header-forside h1{
+     position: absolute;
+     top: 4%;
+     left: 4%;
+     color: var(--bg);
+     font-family: 'Staatliches', cursive;
+     font-size: 45px;
+     font-weight: 400;
+     margin: 0;
+ }
+ 
+ .forside-h2{
+     position: absolute;
+     top: 10%;
+     left: 4%;
+     color: var(--bg);
+     font-family: 'Mulish', sans-serif;
+     font-weight: 200;
+ }
+ 
+ /* Dropdown Content (Hidden by Default) */
+ 
+ .dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: var(--yellow);
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+ }
+ 
+ 
+ /* Links inside the dropdown */
+ 
+ .dropdown-content a {
+     color: var(--bg);
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+     text-align: center;
+     font-weight: 400;
+     font-size: 30px;
+     margin-bottom: 53.5px;
+ }
+ 
+ 
+ /* Change color of dropdown links on hover */
+ .dropdown-content a:hover{
+     background-color: var(--blue);
+ }
+ 
+ /* Show the dropdown menu on hover */
+ .dropdown:hover .dropdown-content{
+     display: block;
+ }
+ 
+ .show {
+     display: block;
+ }
+  
+ .show .dropdown-content{
+      display: block;
+ }
 
-/*main content*/
+/*main content på forside*/
 
 .fokus{
     padding: 45px;
@@ -62,7 +136,7 @@ body{
 }
 
 
-/*footer til forside*/
+/*footer*/
 
 .footer{
     background-color: var(--blue);
@@ -83,81 +157,6 @@ p{
     padding-bottom: 0;
     margin-bottom: 0;
     
-}
-
-/*Drop down button*/
-.menu{
-   width: 35px;
-    top: 2%;
-    position: absolute;
-    right: 4%;
-    z-index: 5;
-}
-
-/*header*/
-.header-forside h1{
-    position: absolute;
-    top: 4%;
-    left: 4%;
-    color: var(--bg);
-    font-family: 'Staatliches', cursive;
-    font-size: 45px;
-    font-weight: 400;
-    margin: 0;
-}
-
-.forside-h2{
-    position: absolute;
-    top: 10%;
-    left: 4%;
-    color: var(--bg);
-    font-family: 'Mulish', sans-serif;
-    font-weight: 200;
-}
-
-/* Dropdown Content (Hidden by Default) */
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: var(--yellow);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-
-/* Links inside the dropdown */
-
-.dropdown-content a {
-    color: var(--bg);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    font-weight: 400;
-    font-size: 30px;
-    margin-bottom: 53.5px;
-}
-
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover{
-    background-color: var(--blue);
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content{
-    display: block;
-}
-
-.show {
-    display: block;
-}
- 
-.show .dropdown-content{
-     display: block;
 }
 
 
@@ -184,6 +183,8 @@ h2{
     font-size: 15px;
 }
 
+
+
 /*CASES SIDE*/
 
 .yellow-header2{
@@ -207,7 +208,7 @@ width: 100%;
     margin-right: 149px;
 }
 
-    .cases img{
+.cases img{
     border-radius: 7px;
     margin-bottom: 10px;
 }
@@ -246,7 +247,6 @@ width: 100%;
     top: 50px;
     left: 39%;
     margin: 0;
-    
 }
 
 .boks{
@@ -277,17 +277,6 @@ width: 100%;
     width: 100%;
 }
 
-.om-h1{
-    font-weight: 400;
-    color: var(--bg);
-    font-size: 40px;
-    text-align: center;
-    position: absolute;
-    top: 50px;
-    left: 39%;
-    margin: 0;
-}
-
 /*Tekstboks på om-mig*/
 .boks2{
     background-color: var(--yellow);
@@ -312,6 +301,7 @@ width: 100%;
     position: absolute;
     top: 100px;
     left: 140px;
+    
 }
 
 .mig2{
